# superset

./: UPDATING.md
superset/: config.py
superset-websocket/spec/: config.test.ts  index.test.ts
superset-websocket/src/: config.ts  index.ts
superset/async_events/: async_query_manager.py
superset/reports/notifications/: webhook.py  webhook_security.py
tests/unit_tests/async_events/: async_query_manager_tests.py
tests/unit_tests/reports/notifications/: webhook_security_tests.py  webhook_tests.py
tools/vuln-remediation-bot/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tools/vuln-remediation-bot/rules/: event_driven.yaml
tools/vuln-remediation-bot/scripts/: live_demo.py
tools/vuln-remediation-bot/src/bot/: __init__.py  cli.py  config.py  dashboard.py  devin_client.py  dispatcher.py  github_webhook.py  logging_setup.py  main.py  metrics.py  models.py  prompt_builder.py  scanner.py  storage.py
tools/vuln-remediation-bot/src/bot/templates/: dashboard.html
tools/vuln-remediation-bot/tests/: conftest.py  test_devin_client.py  test_dispatcher.py  test_main.py  test_scanner.py  test_webhook.py
